--- a/src/core/Layout.scss
+++ b/src/core/Layout.scss
@@ -1,32 +1,43 @@
 @import '/src/styles/variables';
 
 .main-section-nav {
-    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
     background-color: #E3E8F1;
-    top: 0;
-    z-index: 10;
-    width: 100%;
+    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
     display: flex;
-    color: #000000;
     padding: 1rem;
+    color: #000000;
     flex-wrap: wrap;
     position: sticky;
+    top: 0;
+    z-index: 4;
+    width: 100%;
     border-radius: 3px;
     flex-direction: row;
     align-items: center;
 
+    @include md {
+        padding: 0.5rem 1rem;
+        justify-content: space-between;
+        top: 47px;
+
+    }
 
     li {
+        margin: 0 0.5rem 0 1rem;
         align-items: center;
         text-transform: uppercase;
         display: flex;
         cursor: pointer;
-        margin: 0 0.5rem 0 1rem;
         font-weight: 600;
     }
 
     .switcher-item {
+        order: 4;
         margin-left: 50px;
+
+        @include md {
+            margin-left: 0;
+        }
 
         p {
             font-weight: 600;
@@ -37,12 +48,29 @@
     .nav-item {
         cursor: pointer;
 
+        &:nth-child(1) {
+            order: 2;
+        }
+
+        &:nth-child(2) {
+            order: 4;
+        }
+
+        &:nth-child(4) {
+            order: 3;
+        }
+
+        @include md {
+            display: none;
+        }
+
         &.active {
             .check-icon {
                 border: 2px solid #005473;
 
                 &::after {
                     transform: translate(-50%, -50%) scale(1);
+                    opacity: 1;
                 }
             }
         }
@@ -50,29 +78,73 @@
 
 }
 
+.slider {
+    width: 100%;
+    max-width: 500px;
+}
+
+.select-filter {
+    display: none !important;
+    position: absolute;
+    right: 6rem;
+
+    select {
+        outline: none;
+        padding: 0.5rem;
+        font-size: .8rem;
+        border: none;
+        cursor: pointer;
+    }
+
+    .nav-item {
+        display: block !important
+    }
+
+    @include md {
+        display: block !important;
+    }
+}
+
+.MuiSlider-root {
+    color: #63738e !important;
+}
+
+.MuiSlider-thumb {
+    color: #fcfcfc;
+    border: 1px solid black;
+}
+
 .offers-wrapper {
+    height: 80vh;
     padding-top: 1.5rem;
+
+    @include md {
+        height: 81vh;
+    }
 
     .offers {
         color: #232428;
-        font-size: 1.17rem;
         padding: 2rem 3.5rem 0 2rem;
+        font-size: 1.17rem;
+        display: flex;
+        justify-content: space-between;
 
         h3 {
             position: relative;
             margin: 0 3rem 0.5rem 0;
             color: #4D5F8D;
             text-transform: uppercase;
+            max-height: 27px;
 
             &::before {
+                display: block;
+                position: absolute;
+                margin-right: 1rem;
                 top: 50%;
                 left: -1rem;
                 content: "";
                 width: 0.3rem;
                 height: 1.2rem;
-                display: block;
-                position: absolute;
-                margin-right: 1rem;
                 border-radius: 5px;
                 background-color: #34C5A7;
                 transform: translateY(-50%);
@@ -84,22 +156,58 @@
 
 
 .side-section {
-    top: 0;
-    width: 280px;
-    height: 100%;
-    padding: 0 0.2rem;
     position: sticky;
+    width: 280px;
+    height: 100vh;
+    top: 0;
+    padding: 0 0.2rem;
     overflow-y: auto;
     margin-right: 20px;
     background-color: #F7F9FC;
+
+    @include md {
+        width: 230px !important;
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 0;
+        z-index: 50;
+        transition: all .2s ease-in;
+        transform: translateX(-100%);
+        box-shadow: 0 10px 20px rgb(0 0 0 / 19%), 0 6px 6px rgb(0 0 0 / 23%);
+    }
+
+    &.active {
+        transform: translateX(0%);
+    }
+}
+
+.menu-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    z-index: 20;
+    top: 0;
+    left: 0;
+    overflow: unset;
+    line-height: unset;
+
+    @include minMd {
+        display: none !important;
+    }
 }
 
 .search-nav {
     flex: 1;
     margin: 0;
+    order: 5;
     cursor: default;
     justify-content: flex-end;
 
+    @include md {
+        display: none !important;
+    }
 
 
     input {
@@ -121,6 +229,99 @@
     padding-bottom: 2rem;
     flex-direction: column;
     width: calc(100% - 300px);
+
+    overflow: auto;
+    height: 100%;
+
+    &::-webkit-scrollbar {
+        width: 4px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: rgb(190, 190, 190);
+    }
+
+    @include md {
+        width: 100%;
+    }
+}
+
+.main-section-nav-mobile {
+    top: 0;
+    width: 100%;
+    display: flex;
+    color: #000000;
+    padding: 1rem;
+    flex-wrap: wrap;
+    position: sticky;
+    z-index: 4;
+    border-radius: 3px;
+    flex-direction: row;
+    align-items: center;
+    background-color: #E3E8F1;
+    box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+    display: none;
+
+    @include md {
+        display: flex;
+        padding: 0.5rem 1rem;
+    }
+}
+
+.burger-menu {
+    height: 2rem;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    margin: 0 2rem 0 0;
+    padding-left: 2.5rem;
+    background-size: auto 100%;
+    background-image: url('../assets/images/burger.png');
+    background-repeat: no-repeat;
+    font-size: 14px;
+    font-weight: bold;
+    color: black;
+}
+
+.mobile-search {
+    flex: 1;
+    margin: 0;
+    cursor: default;
+    justify-content: flex-end;
+    display: flex;
+
+    input {
+
+        background-position: center;
+        width: 34px;
+        height: 34px;
+        background-image: url('../assets/images/search.png');
+        background-repeat: no-repeat;
+        z-index: 2;
+        border: none;
+        outline: none;
+        color: #757B8D;
+        display: block;
+        padding: 0.5rem;
+        max-width: 300px;
+        box-shadow: none;
+        font-size: 1rem;
+        border-radius: 100px;
+        background-size: auto 75% !important;
+        transition: all 0.2s;
+
+        &:focus {
+            width: 100%;
+            background-image: none;
+            transition: all 0.2s;
+            background-color: white;
+
+        }
+    }
 }
 
 i.check-icon {
@@ -143,6 +344,8 @@ i.check-icon {
         position: absolute;
         transition: all .2s ease-in-out;
         border: 2px solid #005473;
+        opacity: 0;
+        border-radius: 3px;
 
         transform: translate(-50%, -50%) scale(0);
         background: #005473 url("../assets/images/check.png") no-repeat center;
@@ -151,6 +354,8 @@ i.check-icon {
 }
 
 .menu-nav {
+    order: 6;
+
     .filter-icon {
         width: 1.8rem;
         height: 1.8rem;
@@ -198,7 +403,6 @@ i.check-icon {
         }
 
         &:hover {
-            // opacity: 1;
 
             &::before {
                 transform: scale(0) translateY(-50%) !important;
@@ -221,6 +425,8 @@ i.check-icon {
 
                     &::after {
                         transform: translate(-50%, -50%) scale(1);
+                        opacity: 1;
+
                     }
                 }
             }
@@ -236,6 +442,8 @@ i.check-icon {
                 .check-icon {
 
                     &::after {
+                        opacity: 1;
+
                         transform: translate(-50%, -50%) scale(1);
                     }
                 }
@@ -252,6 +460,8 @@ i.check-icon {
                 .check-icon {
 
                     &::after {
+                        opacity: 1;
+
                         transform: translate(-50%, -50%) scale(1);
                     }
                 }
@@ -268,6 +478,8 @@ i.check-icon {
                 .check-icon {
 
                     &::after {
+                        opacity: 1;
+
                         transform: translate(-50%, -50%) scale(1);
                     }
                 }
@@ -276,9 +488,48 @@ i.check-icon {
     }
 }
 
-.card-wrap {
-    background: rgba(0, 0, 0, 0.2);
+.last-prise {
+    color: #ccc;
+    font-size: 0.9rem;
+    text-decoration: line-through;
+    margin-left: .6rem;
+}
+
+.card-discount {
+    position: absolute;
+    top: 0;
+    right: 0;
     z-index: 2;
+    background-color: #c83800;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 95px;
+    height: 55px;
+    padding: 0.2rem;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 11px;
+    align-items: center;
+
+    svg {
+        width: 10px;
+        height: 10px;
+        margin-right: 4px;
+    }
+
+    p {
+        font-size: 20px;
+        font-weight: bold;
+    }
+}
+
+.card-wrap {
+    user-select: none;
+
+    background: rgba(0, 0, 0, 0.2);
+    z-index: 1;
     width: 100%;
     height: 100%;
     display: flex;
@@ -286,26 +537,39 @@ i.check-icon {
     padding: 0.7rem;
     position: relative;
 
-    .card-inner {
-        flex: 1;
-    }
-
     .card-name {
         font-size: .9rem;
         font-weight: bold;
         color: white;
         padding-bottom: 5px;
+        opacity: 0;
+        transition: all .1s ease;
+
     }
 
     .card-price {
         font-size: 1rem;
         color: #ffee3f;
+        transition: all .1s ease;
+        position: relative;
+
+        &::before {
+            bottom: 130%;
+            color: #ffffff;
+            display: block;
+            font-size: .9rem;
+            font-weight: bold;
+            position: absolute;
+            content: attr(data-text);
+            transition: all .3s ease;
+        }
     }
 
     .card-text {
         font-weight: bold;
         font-size: 1.1rem;
         color: white;
+        position: absolute;
 
         span {
             padding-right: 3px;
@@ -314,6 +578,52 @@ i.check-icon {
 }
 
 
+.card-desc {
+    opacity: 0;
+    color: #ccc;
+    font-size: .9rem;
+    font-weight: 200;
+    padding: 0.8rem 0;
+    flex: 1;
+}
+
+.card-btns {
+    padding: 0;
+    width: 100%;
+    display: flex;
+    transition: all .3s ease;
+
+    height: 0;
+
+    >div {
+
+
+        &:first-child {
+            margin-right: 0.4rem;
+            margin-left: 0 !important;
+            background: #019741;
+        }
+
+        &:nth-child(2) {
+            background: #0076b4;
+            font-size: 14px;
+            margin-left: 0.4rem;
+            margin-right: 0 !important;
+        }
+
+        opacity: 0;
+        display: flex;
+        color: #ffffff;
+        cursor: pointer;
+        font-size: 20px;
+        text-align: center;
+        font-weight: bold;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        transition: opacity .1s ease-out;
+    }
+}
 
 .wrapper {
     display: flex;
@@ -334,6 +644,52 @@ i.check-icon {
         background-position: center top;
         border: 5px solid #ffffff;
         box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
+        transition: all .3s ease;
+
+        &:hover {
+            .card-wrap {
+                z-index: 3;
+                background: rgba(0, 0, 0, 0.75);
+                transition: all .3s ease;
+
+                .card-desc {
+                    opacity: 1;
+                    flex: 1;
+
+                }
+
+                .card-price {
+                    padding-bottom: 0.8rem;
+
+                    &::before {
+                        opacity: 0;
+                        transition: all .1s ease;
+                    }
+                }
+
+                .card-text {
+                    opacity: 0;
+                }
+
+                .card-name {
+                    opacity: 1;
+                    transition: all .1s ease;
+
+                }
+
+                .card-btns {
+
+                    height: 40px;
+
+                    >div {
+                        flex: 1;
+
+                        opacity: 1;
+                        transition: opacity 0.3s cubic-bezier(0, -0.04, 0.36, -0.73);
+                    }
+                }
+            }
+        }
 
         @include lg {
             width: 31.9%;
