--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,3 @@
-@mixin xl {
-    @media (max-width: 1366px) {
-        @content;
-    }
-}
-
 @mixin lg {
     @media (max-width: 1366px) {
         @content;
@@ -12,6 +6,12 @@
 
 @mixin md {
     @media (max-width: 1000px) {
+        @content;
+    }
+}
+
+@mixin minMd {
+    @media (min-width: 1000px) {
         @content;
     }
 }
